crates/envoy-config/fuzz/corpus/parse_bootstrap/route_name.yaml
node: { id: fuzz-accesslog-route-name, cluster: fuzz-accesslog-route-name }
static_resources:
  listeners:
    - name: l1
      address: { socket_address: { address: 127.0.0.1, port_value: 10000 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP1
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/fuzz-accesslog-route-name.log
                      log_format:
                        json_format:
                          rn: "r=%ROUTE_NAME%"
                          single_rn: "%ROUTE_NAME%"
                          proto: "%PROTOCOL%"
                          method: "%REQ(:METHOD)%"
                route_config:
                  name: r
                  virtual_hosts:
                    - name: v
                      domains: ["*"]
                      routes:
                        - name: myroute
                          match: { prefix: "/" }
                          direct_response: { status: 200, body: { inline_string: "fuzz\n" } }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters: []
